# EdgeSpeechRT

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
benchmarks/: comparison.csv  latency.csv  latency_report.md  metrics_fp32.csv  metrics_int8_dynamic.csv  metrics_int8_static.csv  metrics_noisy.csv  summary.csv  summary.md  training_curve.csv
configs/: gtcrn_base.yaml  gtcrn_pruned.yaml  qat_int8.yaml  quant_int8_static.yaml
cpp/include/edgespeech_rt/: audio_buffer.hpp  enhancer.hpp  stft.hpp  wav_io.hpp
cpp/src/: audio_buffer.cpp  enhancer.cpp  main_wav_cli.cpp  stft.cpp  wav_io.cpp
docs/: cpp_api.md  debugging_notes.md  design.md  quantization_report.md
matlab/: compare_python_cpp_outputs.m  plot_metric_summary.m  reference_stft.m
python/: download_vctk_demand.py  enhance.py  evaluate.py  export_onnx.py  gtcrn_compare.py  plot.py  profile_ort.py  qat_finetune.py  quantize_onnx.py  report.py  train.py
python/edgespeech_rt/: __init__.py  audio.py  config.py  dataset.py  export.py  model.py
tests/: test_export_equivalence.py  test_latency_budget.cpp  test_metrics_regression.py  test_python_cpp_equivalence.py  test_stft_roundtrip.cpp  test_streaming_state_reset.cpp
